index and css file added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CJ Staudinger | Full Stack Developer</title>
 </head>
+<h1>My Folio</h1>
 <body>
     
 </body>
