beginning of site skeleton

--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>CJ Staudinger | Full Stack Developer</title>
 </head>
-<h1>My Folio</h1>
 <body>
-    
+    <div class="section hero-container">
+
+    </div>
+    <div class="section about-container">
+
+    </div>
+    <div class="section skills-container">
+            <div class="section-title skills-title">
+                <h2 id="skills-title">Skills</h2>
+            </div>
+        <div class="skills-flex-wrapper-outer">
+            <div class="skills-frontend-container">
+                <div class="icon-frontend">
+                </div>
+                <h2 class="skills-heading frontend-heading">Front End
+                </h2>
+                <div class="skills-description frontend-description">
+                </div>    
+            </div>
+            <div class="skills-backend-container">
+                <div class="icon-backend">
+
+                </div>
+            </div>
+            <div class="skills-design-container">
+                <div class="icon-design">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section work-container">
+
+    </div>
+    <div class="section contact-container">
+
+    </div>
 </body>
 </html>
