responsive skeleton working - skills, folio, about, footer 80% complete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,43 +8,149 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
     <title>CJ Staudinger | Full Stack Developer</title>
 </head>
+
 <body>
     <div class="section hero-container">
-
-    </div>
-    <div class="section about-container">
-
     </div>
     <div class="section skills-container">
-            <div class="section-title skills-title">
-                <h2 id="skills-title">Skills</h2>
-            </div>
+        <div class="section-heading">
+            <h2 class="section-title skills-title">Skills</h2>
+        </div>
         <div class="skills-flex-wrapper-outer">
-            <div class="skills-frontend-container">
+            <div class="skills-column-container skills-frontend-container">
                 <div class="icon-frontend">
                 </div>
-                <h2 class="skills-heading frontend-heading">Front End
+                <h2 class="skills-heading frontend-heading">
+                    Front End
                 </h2>
-                <div class="skills-description frontend-description">
-                </div>    
+                <p class="skills-description frontend-description">
+                    I enjoy coding the browser to life. The immediate feedback of is a thrill.
+                </p>
+                <h3>
+                    Languages I Speak
+                </h3>
+                <p>
+                    HTML, CSS, Javascript, React, Node, Express, Bootstrap
+                </p>
+                <h3>
+                    Dev Tools
+                </h3>
+                <ul class="skills-ul">
+                    <li class="skills-tools-li">Asana</li>
+                    <li class="skills-tools-li">Trello</li>
+                    <li>Chrome DevTools</li>
+                    <li>Atom</li>
+                    <li>Codepen</li>
+                </ul>
             </div>
-            <div class="skills-backend-container">
+            <div class="skills-column-container skills-backend-container">
                 <div class="icon-backend">
-
                 </div>
+                <h2 class="skills-heading backend-heading">
+                    Back End
+                </h2>
+                <p class="skills-description backend-description">
+                    From small scale personal curiousities to larger team orientated projects, I love building it!
+                </p>
+                <h3>
+                    Languages I Speak
+                </h3>
+                <p>
+                    Ruby, Rails, SQL, PostgressSQL, MongoDB
+                </p>
+                <h3>
+                    Dev Tools
+                </h3>
+                <ul class="skills-ul">
+                    <li>SourceTree</li>
+                    <li>Terminal</li>
+                    <li>VSCode</li>
+                    <li>Packages</li>
+                    <li>API's</li>
+                    <li>Git/Github</li>
+                </ul>
             </div>
-            <div class="skills-design-container">
+            <div class="skills-column-container skills-design-container">
                 <div class="icon-design">
-
+                </div>
+                <h2 class="skills-heading design-heading">Design
+                </h2>
+                <p class="skills-description design-description">
+                    I value clean designs, purposeful content structure, and thoughtful interactions.
+                </p>
+                <h3>
+                    Things I Enjoy Designing
+                </h3>
+                <p>
+                    UX,UI, Web, Mobile, Apps, Logos
+                </p>
+                <h3>
+                    Design Tools
+                </h3>
+                <ul class="skills-ul">
+                    <li>Figma</li>
+                    <li>Sketch</li>
+                    <li>Adobe: Ai, Lr, Ps</li>
+                    <li>Lucid Chart</li>
+                </ul>
+            </div>
+        </div>
+    </div>    
+    <div class="section folio-container">
+        <div class="section-heading folio-heading">
+            <h2 class="section-title folio-title">
+                Folio
+            </h2>
+        </div>
+        <div class="projects-wrapper">
+            <div class="project-wrapper"></div>
+            <div class="project-wrapper"></div>
+            <div class="project-wrapper"></div>
+            <div class="project-wrapper"></div>
+            <div class="project-wrapper"></div>
+            <div class="project-wrapper"></div>
+        </div>
+        </div>    
+    </div>
+    <div class="section about-container">
+        <div class="section-heading about-heading">
+            <h2 class="section-title about-title">
+                More About Me
+            </h2>
+        </div>
+        <div class="about-grid-wrapper-outer">
+            <p class="about-text">
+                I am an aspiring full stack developer, currently a student of Coder Academy’s intensive full stack bootcamp.
+            <br><br>
+                My previous business ventures have allowed me to touch on subjects such as Social Media Marketing, SEO, aerial photography,  graphic design and web design.
+            <br><br>       
+                It was through these ventures that I got to write my first lines of code and instantly fell in love.
+            <br><br>      
+                A few years later and I now have the opportunity to turn writting code into my career!
+            <br><br>             
+                Outside of code, I love to surf, read, drink coffee, eat delicious food (or any food really), play soccer and rugby, and be outdoors.
+            </p>
+            <div class="about-image-wrapper">
+                <div class="about-image">
                 </div>
             </div>
         </div>
     </div>
-    <div class="section work-container">
-
-    </div>
     <div class="section contact-container">
-
+        <div class="section-heading contact-heading">
+            <h2 class="section-title contact-title">
+                Get In Touch
+            </h2>
+        </div>
+                
+    </div>
+    <div class="section footer-container">
+        <div class="section-heading footer-heading">
+            <p class="section-title footer-title">
+                Designed & Coded By Chris Staudinger
+            </p>
+        </div>
     </div>
 </body>
+
 </html>
