responsive skeleton working - skills, folio, about, contact, footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <title>CJ Staudinger | Full Stack Developer</title>
 </head>
 
@@ -137,12 +138,44 @@
         </div>
     </div>
     <div class="section contact-container">
-        <div class="section-heading contact-heading">
-            <h2 class="section-title contact-title">
-                Get In Touch
-            </h2>
-        </div>
-                
+        <div class="contact-container-inner">
+            <div class="section-heading contact-heading">
+                <h2 class="section-title contact-title">
+                    Get In Touch
+                </h2>
+            </div>
+            <div class="icon-flex-wrapper">
+                <i class="social-media-icon fab fa-facebook"></i>
+                <i class="social-media-icon fab fa-instagram"></i>
+                <i class="social-media-icon fab fa-github"></i>
+                <i class="social-media-icon fab fa-twitter-square"></i>
+            </div>
+            <div class="contact-form-flex-wrapper">
+                <p>
+                    First Name
+                </p>
+                <div class="contact-box user-firstname-box">
+                </div>
+                <p>
+                    Last Name
+                </p>
+                <div class="contact-box user-lastname-box">
+                </div>
+                <p>
+                    Email
+                </p>
+                <div class="contact-box user-email-box">
+                </div>
+                <p>
+                    Message
+                </p>
+                <div class="contact-box user-message-box">
+                </div>
+            </div>
+            <button class="contact-form-submit-btn">
+                Submit
+            </button>
+        </div>                
     </div>
     <div class="section footer-container">
         <div class="section-heading footer-heading">
