--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
 
 <body>
     <div class="section hero-container">
+        <h1 class="hero-heading">
+            Hello, I’m CJ.
+            <br>I’m A Full Stack Developer.
+        </h1>
+        <div class="scroll-down-btn fas fa-chevron-down">
+        </div>
+        <div class="logo" id="hero-logo">
+        </div>
+        <button class="cta-btn hero-contact-btn">
+            Get In Touch
+        </button>
+        <div class="icon-flex-wrapper" id="hero-icons">
+            <i class="social-media-icon fab fa-facebook">
+            </i>
+            <i class="social-media-icon fab fa-instagram">
+            </i>
+            <i class="social-media-icon fab fa-github">
+            </i>
+            <i class="social-media-icon fab fa-twitter-square">
+            </i>
+        </div>
+        <div class="hero-nav-flex-wrapper">
+            <h3>
+                Home
+            </h3>
+            <h3>
+                Skills
+            </h3>
+            <h3>
+                Folio
+            </h3>
+            <h3>
+                About
+            </h3>
+            <h3>
+                Contact
+            </h3>
+        </div>
     </div>
     <div class="section skills-container">
         <div class="section-heading">
@@ -104,12 +142,18 @@
             </h2>
         </div>
         <div class="projects-wrapper">
-            <div class="project-wrapper"></div>
-            <div class="project-wrapper"></div>
-            <div class="project-wrapper"></div>
-            <div class="project-wrapper"></div>
-            <div class="project-wrapper"></div>
-            <div class="project-wrapper"></div>
+            <div class="project-wrapper">
+            </div>
+            <div class="project-wrapper">
+            </div>
+            <div class="project-wrapper">
+            </div>
+            <div class="project-wrapper">
+            </div>
+            <div class="project-wrapper">
+            </div>
+            <div class="project-wrapper">
+            </div>
         </div>
         </div>    
     </div>
@@ -145,10 +189,14 @@
                 </h2>
             </div>
             <div class="icon-flex-wrapper">
-                <i class="social-media-icon fab fa-facebook"></i>
-                <i class="social-media-icon fab fa-instagram"></i>
-                <i class="social-media-icon fab fa-github"></i>
-                <i class="social-media-icon fab fa-twitter-square"></i>
+                <i class="social-media-icon fab fa-facebook">
+                </i>
+                <i class="social-media-icon fab fa-instagram">
+                </i>
+                <i class="social-media-icon fab fa-github">
+                </i>
+                <i class="social-media-icon fab fa-twitter-square">
+                </i>
             </div>
             <div class="contact-form-flex-wrapper">
                 <p>
@@ -172,7 +220,7 @@
                 <div class="contact-box user-message-box">
                 </div>
             </div>
-            <button class="contact-form-submit-btn">
+            <button class="contact-form-submit-btn cta-btn">
                 Submit
             </button>
         </div>                
