most responsiveness completed, stick nav structure implementd

--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
             </i>
             <i class="social-media-icon fab fa-instagram">
             </i>
+            <i class="social-media-icon fab fa-linkedin">
+            </i>
             <i class="social-media-icon fab fa-github">
             </i>
             <i class="social-media-icon fab fa-twitter-square">
             </i>
         </div>
-        <div class="hero-nav-flex-wrapper">
+        <div class="hero-nav-flex-wrapper header" id="myHeader">
+            <div class="logo">
+            </div>
             <h3>
                 Home
             </h3>
@@ -193,6 +197,8 @@
                 </i>
                 <i class="social-media-icon fab fa-instagram">
                 </i>
+                <i class="social-media-icon fab fa-linkedin">
+                </i>
                 <i class="social-media-icon fab fa-github">
                 </i>
                 <i class="social-media-icon fab fa-twitter-square">
@@ -232,6 +238,22 @@
             </p>
         </div>
     </div>
-</body>
 
+    <script src="./assets/scripts/main.js"></script>
+
+    <!-- <script>
+        window.onscroll = function() {myFunction()};
+        
+        var header = document.getElementById("myHeader");
+        var sticky = header.offsetTop;
+        
+        function myFunction() {
+            if (window.pageYOffset > sticky) {
+            header.classList.add("sticky", "navbar");
+            } else {
+            header.classList.remove("sticky", "navbar");
+            }
+        }
+    </script> -->
+</body>
 </html>
