project containers structure and animations completed working

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>CJ Staudinger | Full Stack Developer</title>
 </head>
@@ -18,8 +19,10 @@
             Hello, I’m CJ.
             <br>I’m A Full Stack Developer.
         </h1>
-        <div class="scroll-down-btn fas fa-chevron-down">
-        </div>
+        <a href="#skills" class="scroll-down-btn-wrapper">
+            <div class="fas fa-chevron-down scroll-down-btn">
+            </div>
+        </a>
         <div class="logo" id="hero-logo">
         </div>
         <a href="#contact" class="hero-contact-btn">
@@ -173,7 +176,19 @@
             </h2>
         </div>
         <div class="projects-wrapper">
-            <div class="project-wrapper">
+            <div class="project-wrapper GOT-game">
+                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Game Of Thrones Game
+                        </h3>
+                        <p>
+                            Choose your character and battle through this gamebook adventure.
+                            <br><br>
+                            Ruby Terminal App
+                        </p>
+                    </div>
+                </a>
             </div>
             <div class="project-wrapper">
             </div>
