All of page  z-indexing correct levels

--- a/index.html
+++ b/index.html
@@ -190,15 +190,75 @@
                     </div>
                 </a>
             </div>
-            <div class="project-wrapper">
+            <div class="project-wrapper GOT-game">
+                <a href="https://github.com/chrisstaudinger/articleChecker" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Game Of Thrones Game
+                        </h3>
+                        <p>
+                            Choose your character and battle through this gamebook adventure.
+                            <br><br>
+                            Ruby Terminal App
+                        </p>
+                    </div>
+                </a>
             </div>
-            <div class="project-wrapper">
+            <div class="project-wrapper GOT-game">
+                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Game Of Thrones Game
+                        </h3>
+                        <p>
+                            Choose your character and battle through this gamebook adventure.
+                            <br><br>
+                            Ruby Terminal App
+                        </p>
+                    </div>
+                </a>
             </div>
-            <div class="project-wrapper">
+            <div class="project-wrapper GOT-game">
+                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Game Of Thrones Game
+                        </h3>
+                        <p>
+                            Choose your character and battle through this gamebook adventure.
+                            <br><br>
+                            Ruby Terminal App
+                        </p>
+                    </div>
+                </a>
             </div>
-            <div class="project-wrapper">
+            <div class="project-wrapper GOT-game">
+                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Game Of Thrones Game
+                        </h3>
+                        <p>
+                            Choose your character and battle through this gamebook adventure.
+                            <br><br>
+                            Ruby Terminal App
+                        </p>
+                    </div>
+                </a>
             </div>
-            <div class="project-wrapper">
+            <div class="project-wrapper GOT-game">
+                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Game Of Thrones Game
+                        </h3>
+                        <p>
+                            Choose your character and battle through this gamebook adventure.
+                            <br><br>
+                            Ruby Terminal App
+                        </p>
+                    </div>
+                </a>
             </div>
         </div>
         </div>    
