Folio Projects Completed

--- a/index.html
+++ b/index.html
@@ -190,72 +190,74 @@
                     </div>
                 </a>
             </div>
-            <div class="project-wrapper GOT-game">
+            <div class="project-wrapper portfolio-project">
+                <a href="https://github.com/chrisstaudinger/my-portfolio" target="_blank">
+                    <div class="project-overlay">
+                        <h3>
+                            Portfolio
+                        </h3>
+                        <p>
+                            My Portfolio. Click to view more of the process and planning of building this project.
+                            <br><br>
+                            HTML, CSS, Javascript
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="project-wrapper article-checker-app">
                 <a href="https://github.com/chrisstaudinger/articleChecker" target="_blank">
                     <div class="project-overlay">
                         <h3>
-                            Game Of Thrones Game
+                            Article Checker
                         </h3>
                         <p>
-                            Choose your character and battle through this gamebook adventure.
+                            Check over your work to see where it can be improved.
                             <br><br>
                             Ruby Terminal App
                         </p>
                     </div>
                 </a>
             </div>
-            <div class="project-wrapper GOT-game">
-                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+            <div class="project-wrapper climate-awareness-project">
+                <a>
                     <div class="project-overlay">
                         <h3>
-                            Game Of Thrones Game
+                            Coming Soon... <br>
+                            Climate Change Awareness
                         </h3>
                         <p>
-                            Choose your character and battle through this gamebook adventure.
+                            A site dedicated to climate change awareness and solutions on peronsal, community and soverign level.
                             <br><br>
-                            Ruby Terminal App
+                            Node, Express
                         </p>
                     </div>
                 </a>
             </div>
-            <div class="project-wrapper GOT-game">
-                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+            <div class="project-wrapper carbon-emissions-project">
+                <a>
                     <div class="project-overlay">
                         <h3>
-                            Game Of Thrones Game
+                            Coming Soon... <br>
+                            Personal Carbon Emissions Calculator
                         </h3>
                         <p>
-                            Choose your character and battle through this gamebook adventure.
+                            App to calculate and track carbon emissions of user's lifestyle.
                             <br><br>
-                            Ruby Terminal App
+                            Ruby On Rails, SQL
                         </p>
                     </div>
                 </a>
             </div>
-            <div class="project-wrapper GOT-game">
-                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
+            <div class="project-wrapper fire-calculator-project">
+                <a>
                     <div class="project-overlay">
                         <h3>
-                            Game Of Thrones Game
+                            F.I.R.E Calculator
                         </h3>
                         <p>
-                            Choose your character and battle through this gamebook adventure.
+                            Webapp that allows users to calculate and plan their finances to reach financial indepedance and retire early (F.I.R.E).
                             <br><br>
-                            Ruby Terminal App
-                        </p>
-                    </div>
-                </a>
-            </div>
-            <div class="project-wrapper GOT-game">
-                <a href="https://github.com/chrisstaudinger/GOT-game" target="_blank">
-                    <div class="project-overlay">
-                        <h3>
-                            Game Of Thrones Game
-                        </h3>
-                        <p>
-                            Choose your character and battle through this gamebook adventure.
-                            <br><br>
-                            Ruby Terminal App
+                            React
                         </p>
                     </div>
                 </a>
