--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <div class="fas fa-chevron-down scroll-down-btn">
             </div>
         </a>
-        <div class="logo" id="hero-logo">
-        </div>
+        <a href="#home" id="hero-logo">
+            <div class="logo">
+            </div>
+        </a>
         <a href="#contact" class="hero-contact-btn">
             <button class="cta-btn cta-btn-contact">
                 Get In Touch
@@ -53,8 +55,10 @@
             </a>
         </div>
         <div class="hero-nav-flex-wrapper header" id="myHeader">
-            <div class="logo">
-            </div>
+            <a href="#home" id="nav-logo">
+                <div class="logo">
+                </div>
+            </a>
             <div class="nav-empty-div">
             </div>
             <a href="#home">
